--- a/build.xml
+++ b/build.xml
@@ -9,7 +9,7 @@
      -->
 
     <!-- Your MC test server location for Windows -->
-    <condition property="serverPath" value="\Users\dubois\Documents\dev\minecraft\server">
+    <condition property="serverPath" value="C:\Users\duboi\Documents\dev\Localserver">
         <os family="windows" />
     </condition>
 
